force-app-metadata-removed/main/default/objects/Group_Appointment__c/Group_Appointment__c.object-meta.xml
<CustomObject>
    <label>Group Appointment</label>
    <nameField>
        <displayFormat>GA-{000000}</displayFormat>
        <label>Group Appointment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>