force-app-metadata-removed/main/default/objects/Group_Appointment__c/fields/Group_Appointment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Group_Appointment_Notes__c</fullName>
    <label>Group Appointment Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>