force-app-metadata-removed/main/default/objects/Group_Appointment__c/fields/Max_Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Max_Number_of_Attendees__c</fullName>
    <label>Max Number of Attendees</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>