force-app-metadata-removed/main/default/objects/Group_Appointment__c/fields/MyGroup__c.field-meta.xml
<CustomField>
    <fullName>MyGroup__c</fullName>
    <description>Is true when the running user is the practitioner on the group</description>
    <formula>IF(Practitioner__c = $User.Id, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Group</label>
    <type>Checkbox</type>
</CustomField>