force-app-metadata-removed/main/default/objects/Group_Appointment__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Went ahead as scheduled</fullName>
            </value>
            <value>
                <fullName>Went ahead with late start</fullName>
            </value>
            <value>
                <fullName>Group cancelled by service &lt;4 hours notice</fullName>
            </value>
            <value>
                <fullName>Group cancelled by service &lt;8 hours notice</fullName>
            </value>
            <value>
                <fullName>Group cancelled by service &lt;12 hours notice</fullName>
            </value>
            <value>
                <fullName>Group cancelled by service &lt;24 hours notice</fullName>
            </value>
            <value>
                <fullName>Group cancelled by service &gt;24 hours notice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>