force-app-metadata-removed/main/default/objects/Group_Appointment__c/fields/Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Practitioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practitioner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Group_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>