force-app-metadata-removed/main/default/objects/Group_Appointment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Planned_Care_Pathway</valueSetName>
    </valueSet>
</CustomField>