force-app-metadata-removed/main/default/objects/Group_Appointment__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Venue</label>
    <referenceTo>Venue__c</referenceTo>
    <relationshipLabel>Group Appointments</relationshipLabel>
    <relationshipName>Group_Appointments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>