force-app-metadata-removed/main/default/objects/Group_Appointment__c/recordTypes/Group_Appointment.recordType-meta.xml
<RecordType>
    <fullName>Group_Appointment</fullName>
    <active>true</active>
    <label>Group Appointment</label>
</RecordType>