force-app-metadata-removed/main/default/objects/Group_Appointment__c/listViews/My_Upcoming_Groups.listView-meta.xml
<ListView>
    <fullName>My_Upcoming_Groups</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Venue__c</columns>
    <columns>Total_number_of_Attendees__c</columns>
    <columns>Max_Number_of_Attendees__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>MyGroup__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>GroupInFuture__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Outcome__c</field>
        <operation>notEqual</operation>
        <value>Group cancelled by service &lt;4 hours notice,Group cancelled by service &lt;8 hours notice,Group cancelled by service &lt;12 hours notice,Group cancelled by service &lt;24 hours notice,Group cancelled by service &gt;24 hours notice</value>
    </filters>
    <label>My Upcoming Groups</label>
</ListView>